fixed spacing of build text

--- a/src/components/Introduction/Introduction.css
+++ b/src/components/Introduction/Introduction.css
@@ -206,7 +206,7 @@
     margin-right: 2.9% !important;
   }
   .stuff {
-    padding-left: 2.5% !important;
+    padding-left: 2.2% !important;
   }
   .grimIam p {
     font-size: 31px !important;
